--- a/index.html
+++ b/index.html
@@ -96,15 +96,9 @@
         
         <!-- Controls Panel -->
         <div class="glass-panel rounded-2xl p-5 pointer-events-auto shadow-2xl transition-all hover:bg-opacity-80">
-            <div class="flex items-start justify-between gap-2 mb-1">
-                <div>
-                    <h1 id="title-text" class="text-2xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-blue-400 to-purple-500">粒子幻境</h1>
-                    <p id="subtitle-text" class="text-xs text-gray-400">通过手势张合控制粒子</p>
-                </div>
-                <select id="lang-select" class="bg-gray-900 border border-gray-700 text-xs rounded px-2 py-1 cursor-pointer">
-                    <option value="zh">中文</option>
-                    <option value="en">English</option>
-                </select>
+            <div class="flex flex-col gap-1 mb-1">
+                <h1 id="title-text" class="text-2xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-blue-400 to-purple-500">粒子幻境</h1>
+                <p id="subtitle-text" class="text-xs text-gray-400">通过手势张合控制粒子</p>
             </div>
 
             <!-- Shape Selection -->
@@ -150,6 +144,22 @@
         </button>
     </div>
 
+    <!-- Obvious Language Toggle -->
+    <div class="absolute top-4 right-4 z-30 pointer-events-none">
+        <div class="glass-panel flex items-center gap-2 px-3 py-2 rounded-full pointer-events-auto shadow-2xl">
+            <span class="flex items-center gap-1 text-xs font-semibold uppercase tracking-wide">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v2m0 14v2m9-9h-2M5 12H3m15.364-6.364l-1.414 1.414M7.05 16.95l-1.414 1.414m12.728 0l-1.414-1.414M7.05 7.05L5.636 5.636" />
+                </svg>
+                <span id="lang-chip-label">Language / 语言</span>
+            </span>
+            <select id="lang-select" class="bg-gray-900 border border-gray-700 text-xs rounded px-2 py-1 cursor-pointer">
+                <option value="zh">中文</option>
+                <option value="en">English</option>
+            </select>
+        </div>
+    </div>
+
     <script>
         // --- 1. 配置与全局变量 ---
         const PARTICLE_COUNT = 18000;
@@ -165,6 +175,7 @@
                 fullscreen: '全屏模式',
                 loadingTitle: '初始化视觉系统...',
                 loadingNote: '首次加载可能需要几秒钟',
+                languageChip: '语言 / Language',
                 shapes: {
                     heart: '❤️ 爱心',
                     flower: '🌸 花朵',
@@ -190,6 +201,7 @@
                 fullscreen: 'Fullscreen',
                 loadingTitle: 'Initializing vision system...',
                 loadingNote: 'First load may take a few seconds',
+                languageChip: 'Language / 语言',
                 shapes: {
                     heart: '❤️ Heart',
                     flower: '🌸 Flower',
@@ -603,6 +615,7 @@
             document.getElementById('loading-title').innerText = copy.loadingTitle;
             document.getElementById('loading-note').innerText = copy.loadingNote;
             document.getElementById('gesture-status').innerText = copy.status.waiting;
+            document.getElementById('lang-chip-label').innerText = copy.languageChip;
             document.querySelectorAll('.shape-btn').forEach(btn => {
                 const key = btn.getAttribute('data-shape');
                 btn.innerText = copy.shapes[key];
